--- a/SIGViewerInstaller/resources.cfg
+++ b/SIGViewerInstaller/resources.cfg
@@ -13,6 +13,10 @@ FileSystem=../media/materials/scripts
 FileSystem=../media/materials/textures
 FileSystem=../media/materials/textures/nvidia
 FileSystem=../media/models
+FileSystem=../media_additions/materials/programs
+FileSystem=../media_additions/materials/scripts
+FileSystem=../media_additions/materials/textures
+FileSystem=../media_additions/models
 FileSystem=../media/particle
 FileSystem=../media/DeferredShadingMedia
 FileSystem=../media/PCZAppMedia
@@ -38,11 +42,14 @@ FileSystem=../../media/../../Tests/Media
 
 [Imagesets]
 FileSystem=../datafiles/imagesets
+FileSystem=../datafiles_additions/imagesets
 [Fonts]
 FileSystem=../datafiles/fonts
 [Schemes]
 FileSystem=../datafiles/schemes
+FileSystem=../datafiles_additions/schemes
 [LookNFeel]
 FileSystem=../datafiles/looknfeel
+FileSystem=../datafiles_additions/looknfeel
 [Layouts]
 FileSystem=../datafiles/layouts
