delete Release directory

--- a/SIGViewer/SIGViewer.vcproj
+++ b/SIGViewer/SIGViewer.vcproj
@@ -131,7 +131,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="OgreMain.lib OIS.lib OgreTerrain.lib comctl32.lib ws2_32.lib winmm.lib CEGUIBase.lib CEGUIOgreRenderer.lib jvm.lib zdll.lib SIGService.lib libovr.lib"
+				AdditionalDependencies="OgreMain.lib OIS.lib OgreTerrain.lib comctl32.lib ws2_32.lib winmm.lib CEGUIBase.lib CEGUIOgreRenderer.lib jvm.lib zlib.lib SIGService.lib libovr.lib"
 				AdditionalLibraryDirectories="&quot;C:\SIGVerse\src\OgreSDK_vc9_v1-8-0\lib\$(ConfigurationName)&quot;;&quot;C:\SIGVerse\src\CEGUI-0.7.6\lib&quot;;C:\SIGVerse\src\jdk\lib;&quot;C:\SIGVerse\src\boost_1_55_0\lib32-msvc-9.0&quot;;&quot;C:\SIGVerse\src\libssh2-1.2.7-openssl-x86-win32nt-msvc\lib&quot;;C:\SIGVerse\src\zlib\lib;C:\SIGVerse\GitHub\SIGVerse_test\SIGService\Windows\Release;C:\SIGVerse\src\OculusSDK\LibOVR\Lib\Win32"
 				GenerateDebugInformation="true"
 				OptimizeReferences="2"
