--- a/SIGViewer/SIGViewer.vcxproj
+++ b/SIGViewer/SIGViewer.vcxproj
@@ -129,6 +129,7 @@
     <UseDebugLibraries>false</UseDebugLibraries>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>MultiByte</CharacterSet>
+    <PlatformToolset>v100</PlatformToolset>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
@@ -173,7 +174,7 @@
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <AdditionalIncludeDirectories>C:\SIGVerse\src\OgreSDK_vc10_v1-8-0\include;C:\SIGVerse\src\OgreSDK_vc10_v1-8-0\include\OIS;C:\SIGVerse\src\OgreSDK_vc10_v1-8-0\include\OGRE;C:\SIGVerse\src\OgreSDK_vc10_v1-8-0\Samples\Common\include;C:\SIGVerse\src\CEGUI-0.7.6\cegui\include;C:\SIGVerse\src\jdk\include;C:\SIGVerse\src\jdk\include\win32;.\x3d\parser\cpp\X3DParser;C:\SIGVerse\src\libssh2-1.4.2-openssl-x86-win32nt-msvc\include;C:\SIGVerse\src\zlib\include;C:\SIGVerse\GitHub\Client\SIGService\Windows\SIGService;C:\SIGVerse\src\boost_1_55_0;C:\SIGVerse\src\OculusSDK\LibOVR\Include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\SIGVerse\ext\OgreSDK_vc10_v1-8-0\include;C:\SIGVerse\ext\OgreSDK_vc10_v1-8-0\include\OIS;C:\SIGVerse\ext\OgreSDK_vc10_v1-8-0\include\OGRE;C:\SIGVerse\ext\OgreSDK_vc10_v1-8-0\Samples\Common\include;C:\SIGVerse\ext\CEGUI-0.7.6\cegui\include;C:\SIGVerse\ext\Java\jdk1.8.0_45\include;C:\SIGVerse\ext\Java\jdk1.8.0_45\include\win32;.\x3d\parser\cpp\X3DParser;C:\SIGVerse\ext\libssh2-1.4.2-openssl-x86-win32nt-msvc\include;C:\SIGVerse\ext\zlib\include;C:\SIGVerse\GitHub\SIGService\Windows\SIGService;C:\SIGVerse\ext\boost_1_55_0;C:\SIGVerse\ext\OculusSDK\LibOVR\Include</AdditionalIncludeDirectories>
       <CompileAs>CompileAsCpp</CompileAs>
       <RuntimeTypeInfo>false</RuntimeTypeInfo>
     </ClCompile>
@@ -182,7 +183,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalDependencies>OgreMain.lib;OIS.lib;OgreTerrain.lib;comctl32.lib;ws2_32.lib;winmm.lib;CEGUIBase.lib;CEGUIOgreRenderer.lib;jvm.lib;zlib.lib;SIGService.lib;libovr.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>C:\SIGVerse\src\OgreSDK_vc10_v1-8-0\lib\$(Configuration);C:\SIGVerse\src\CEGUI-0.7.6\lib;C:\SIGVerse\src\jdk\lib;C:\SIGVerse\src\boost_1_55_0\lib32-msvc-10.0;C:\SIGVerse\src\libssh2-1.4.2-openssl-x86-win32nt-msvc\lib;C:\SIGVerse\src\zlib\lib;C:\SIGVerse\GitHub\Client\SIGService\Windows\Release_2010;C:\SIGVerse\src\OculusSDK\LibOVR\Lib\Win32;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\SIGVerse\ext\OgreSDK_vc10_v1-8-0\lib\$(Configuration);C:\SIGVerse\ext\CEGUI-0.7.6\lib;C:\SIGVerse\ext\Java\jdk1.8.0_45\lib;C:\SIGVerse\ext\boost_1_55_0\lib32-msvc-10.0;C:\SIGVerse\ext\libssh2-1.4.2-openssl-x86-win32nt-msvc\lib;C:\SIGVerse\ext\zlib\lib;C:\SIGVerse\GitHub\SIGService\Windows\Release_2010;C:\SIGVerse\ext\OculusSDK\LibOVR\Lib\Win32;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
