--- a/SIGViewerInstaller/X3DParser.cfg
+++ b/SIGViewerInstaller/X3DParser.cfg
@@ -5,14 +5,13 @@
 #
 # (ex)
 # java.class.path=.;C:\Program Files\myProg\myJavaClasses
-#
-#java.class.path=.;C:\Program Files (x86)\SIGViewer_1.4.8\Xj3D\jars\xj3d-all.jar;C:\Program Files (x86)\SIGViewer_1.4.8\x3d\parser\java\X3DParser\bin
 
-java.class.path=./Xj3D\jars\xj3d-all.jar;./x3d\parser\java\X3DParser\bin
+java.class.path=.;.\Xj3D\xj3d-all.jar;.\Xj3D\X3DParser.jar;
 
 
 #
 # Other JavaVM Options
 #
 [Others]
--Xmx500M
+#-Xmx500M
+
