--- a/SIGViewer/SIGViewer.vcxproj
+++ b/SIGViewer/SIGViewer.vcxproj
@@ -95,7 +95,7 @@
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <AdditionalIncludeDirectories>C:\SIGVerse\GitHub\SIGService\Windows\SIGService;C:\SIGVerse\GitHub\x3d\parser\cpp\X3DParser;C:\SIGVerse\ext\Java\jdk1.8.0_45\include;C:\SIGVerse\ext\Java\jdk1.8.0_45\include\win32;C:\SIGVerse\ext\boost_1_55_0;C:\SIGVerse\ext\OgreSDK_vc10_v1-8-0\include;C:\SIGVerse\ext\OgreSDK_vc10_v1-8-0\include\OIS;C:\SIGVerse\ext\OgreSDK_vc10_v1-8-0\include\OGRE;C:\SIGVerse\ext\OgreSDK_vc10_v1-8-0\Samples\Common\include;C:\SIGVerse\ext\CEGUI-0.7.6\cegui\include;C:\SIGVerse\ext\libssh2-1.4.2-openssl-x86-win32nt-msvc\include;C:\SIGVerse\ext\zlib\include;C:\SIGVerse\ext\OculusRiftDK2\OculusSDK\LibOVR\Src;C:\SIGVerse\ext\OculusRiftDK2\OculusSDK\LibOVR\Include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\SIGVerse\GitHub\SIGService\Windows\SIGService;C:\SIGVerse\GitHub\x3d\parser\cpp\X3DParser;C:\SIGVerse\ext\Java\jdk1.8.0_45\include;C:\SIGVerse\ext\Java\jdk1.8.0_45\include\win32;C:\SIGVerse\ext\boost_1_55_0;C:\SIGVerse\ext\OgreSDK_vc10_v1-8-0\include;C:\SIGVerse\ext\OgreSDK_vc10_v1-8-0\include\OIS;C:\SIGVerse\ext\OgreSDK_vc10_v1-8-0\include\OGRE;C:\SIGVerse\ext\OgreSDK_vc10_v1-8-0\Samples\Common\include;C:\SIGVerse\ext\CEGUI-0.7.6\cegui\include;C:\SIGVerse\ext\libssh2-1.4.2-openssl-x86-win32nt-msvc\include;C:\SIGVerse\ext\zlib\include;C:\SIGVerse\ext\OculusSDK_0.4.3\LibOVR\Include</AdditionalIncludeDirectories>
       <CompileAs>CompileAsCpp</CompileAs>
       <RuntimeTypeInfo>false</RuntimeTypeInfo>
       <ProgramDataBaseFileName>$(IntDir)vc$(PlatformToolsetVersion).pdb</ProgramDataBaseFileName>
@@ -105,7 +105,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalDependencies>OgreMain.lib;OIS.lib;OgreTerrain.lib;comctl32.lib;ws2_32.lib;winmm.lib;CEGUIBase.lib;CEGUIOgreRenderer.lib;zlib.lib;SIGService.lib;libovr.lib;libSgvX3D.lib;jvm.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>C:\SIGVerse\GitHub\SIGService\Windows\Release_2010;C:\SIGVerse\GitHub\x3d\parser\cpp\Release;C:\SIGVerse\ext\Java\jdk1.8.0_45\lib;C:\SIGVerse\ext\boost_1_55_0\lib32-msvc-10.0;C:\SIGVerse\ext\OgreSDK_vc10_v1-8-0\lib\$(Configuration);C:\SIGVerse\ext\CEGUI-0.7.6\lib;C:\SIGVerse\ext\libssh2-1.4.2-openssl-x86-win32nt-msvc\lib;C:\SIGVerse\ext\zlib\lib;C:\SIGVerse\ext\OculusRiftDK2\OculusSDK\LibOVR\Lib\Win32\VS2010;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\SIGVerse\GitHub\SIGService\Windows\Release_2010;C:\SIGVerse\GitHub\x3d\parser\cpp\Release;C:\SIGVerse\ext\Java\jdk1.8.0_45\lib;C:\SIGVerse\ext\boost_1_55_0\lib32-msvc-10.0;C:\SIGVerse\ext\OgreSDK_vc10_v1-8-0\lib\$(Configuration);C:\SIGVerse\ext\CEGUI-0.7.6\lib;C:\SIGVerse\ext\libssh2-1.4.2-openssl-x86-win32nt-msvc\lib;C:\SIGVerse\ext\zlib\lib;C:\SIGVerse\ext\OculusSDK_0.4.3\LibOVR\Lib\Win32\VS2010;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
