--- a/SIGViewer/SIGViewer.vcxproj
+++ b/SIGViewer/SIGViewer.vcxproj
@@ -44,13 +44,14 @@
     <UseDebugLibraries>true</UseDebugLibraries>
     <CharacterSet>MultiByte</CharacterSet>
     <WholeProgramOptimization>false</WholeProgramOptimization>
+    <PlatformToolset>v110</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>MultiByte</CharacterSet>
-    <PlatformToolset>v100</PlatformToolset>
+    <PlatformToolset>v110</PlatformToolset>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
@@ -78,12 +79,38 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <AdditionalIncludeDirectories>C:\SIGVerse\src\OgreSDK_vc10_v1-8-0\include;C:\SIGVerse\src\OgreSDK_vc10_v1-8-0\include\OIS;C:\SIGVerse\src\OgreSDK_vc10_v1-8-0\include\OGRE;C:\SIGVerse\src\OgreSDK_vc10_v1-8-0\Samples\Common\include;C:\SIGVerse\src\CEGUI-0.7.6\cegui\include;C:\SIGVerse\src\jdk\include;C:\SIGVerse\src\jdk\include\win32;.\x3d\parser\cpp\X3DParser;C:\SIGVerse\src\libssh2-1.4.2-openssl-x86-win32nt-msvc\include;C:\SIGVerse\src\zlib\include;C:\SIGVerse\GitHub\Client\SIGService\Windows\SIGService;C:\SIGVerse\src\boost_1_55_0;C:\SIGVerse\src\OculusSDK\LibOVR\Include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>
+			$(OGRE_SDK_PATH)\include;
+			$(OGRE_SDK_PATH)\include\OGRE\Overlay;
+			$(OGRE_SDK_PATH)\include\OIS;
+			$(OGRE_SDK_PATH)\include\OGRE;
+			$(OGRE_SDK_PATH)\Samples\Common\include;
+			$(CEGUI_ROOT_PATH)\cegui\include;
+			$(JDK_PATH)\include;
+			$(JDK_PATH)\include\win32;
+			$(X3D_ROOT_PATH)\parser\cpp\X3DParser;
+			$(LIBSSH2_ROOT_PATH)\include;
+			$(ZLIB_PATH)\include;
+			$(SIGSERVICE_ROOT_PATH)\Windows\SIGService;
+			$(BOOST_ROOT_PATH);
+			$(LIBOVR_ROOT_PATH)\Include
+      </AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\SIGVerse\src\OgreSDK_vc10_v1-8-0\lib\$(ConfigurationName);C:\SIGVerse\src\CEGUI-0.7.6\lib;C:\SIGVerse\src\jdk\lib;C:\SIGVerse\src\boost_1_55_0\lib32-msvc-10.0;C:\SIGVerse\src\libssh2-1.4.2-openssl-x86-win32nt-msvc\lib;C:\SIGVerse\src\zlib\lib;C:\SIGVerse\GitHub\Client\SIGService\Windows\Release_2010;C:\SIGVerse\src\OculusSDK\LibOVR\Lib\Win32</AdditionalLibraryDirectories>
-      <AdditionalDependencies>OgreMain.lib OIS.lib OgreTerrain.lib comctl32.lib ws2_32.lib winmm.lib CEGUIBase.lib CEGUIOgreRenderer.lib jvm.lib zlib.lib SIGService.lib libovr.lib</AdditionalDependencies>
+      <AdditionalLibraryDirectories>
+		$(OGRE_SDK_PATH)\lib\$(ConfigurationName);
+		$(CEGUI_ROOT_PATH)\lib;
+		$(JDK_PATH)\lib;
+		$(BOOST_ROOT_PATH)\stage\lib;
+		$(LIBSSH2_ROOT_PATH)\lib;
+		$(ZLIB_PATH)\lib;
+		$(SIGSERVICE_ROOT_PATH)\Windows\Release_2010;
+		$(LIBOVR_ROOT_PATH)\Lib\Win32
+	  </AdditionalLibraryDirectories>
+      <AdditionalDependencies>
+	    OgreMain.lib OIS.lib OgreTerrain.lib comctl32.lib ws2_32.lib winmm.lib CEGUIBase.lib CEGUIOgreRenderer.lib jvm.lib zlib.lib SIGService.lib libovr.lib
+	  </AdditionalDependencies>
       <OptimizeReferences>true</OptimizeReferences>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <LinkTimeCodeGeneration>UseLinkTimeCodeGeneration</LinkTimeCodeGeneration>
@@ -95,7 +122,22 @@
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <AdditionalIncludeDirectories>C:\SIGVerse\GitHub\SIGService\Windows\SIGService;C:\SIGVerse\GitHub\x3d\parser\cpp\X3DParser;C:\SIGVerse\ext\Java\jdk1.8.0_45\include;C:\SIGVerse\ext\Java\jdk1.8.0_45\include\win32;C:\SIGVerse\ext\boost_1_55_0;C:\SIGVerse\ext\OgreSDK_vc10_v1-8-0\include;C:\SIGVerse\ext\OgreSDK_vc10_v1-8-0\include\OIS;C:\SIGVerse\ext\OgreSDK_vc10_v1-8-0\include\OGRE;C:\SIGVerse\ext\OgreSDK_vc10_v1-8-0\Samples\Common\include;C:\SIGVerse\ext\CEGUI-0.7.6\cegui\include;C:\SIGVerse\ext\libssh2-1.4.2-openssl-x86-win32nt-msvc\include;C:\SIGVerse\ext\zlib\include;C:\SIGVerse\ext\OculusSDK_0.4.3\LibOVR\Include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>
+	    $(SIGSERVICE_ROOT_PATH)\Windows\SIGService;
+		$(X3D_ROOT_PATH)\parser\cpp\X3DParser;
+		$(JDK_PATH)\include;
+		$(JDK_PATH)\include\win32;
+		$(BOOST_ROOT_PATH);
+		$(OGRE_SDK_PATH)\include;
+		$(OGRE_SDK_PATH)\include\OGRE\Overlay;
+		$(OGRE_SDK_PATH)\include\OIS;
+		$(OGRE_SDK_PATH)\include\OGRE;
+		$(OGRE_SDK_PATH)\Samples\Common\include;
+		$(CEGUI_ROOT_PATH)\cegui\include;
+		$(LIBSSH2_ROOT_PATH)\include;
+		$(ZLIB_PATH)\include;
+		$(LIBOVR_ROOT_PATH)\Include
+      </AdditionalIncludeDirectories>
       <CompileAs>CompileAsCpp</CompileAs>
       <RuntimeTypeInfo>true</RuntimeTypeInfo>
       <ProgramDataBaseFileName>$(IntDir)vc$(PlatformToolsetVersion).pdb</ProgramDataBaseFileName>
@@ -104,8 +146,21 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>OgreMain.lib;OIS.lib;OgreTerrain.lib;comctl32.lib;ws2_32.lib;winmm.lib;CEGUIBase.lib;CEGUIOgreRenderer.lib;zlib.lib;SIGService.lib;libovr.lib;libSgvX3D.lib;jvm.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>C:\SIGVerse\GitHub\SIGService\Windows\Release_2010;C:\SIGVerse\GitHub\x3d\parser\cpp\Release;C:\SIGVerse\ext\Java\jdk1.8.0_45\lib;C:\SIGVerse\ext\boost_1_55_0\lib32-msvc-10.0;C:\SIGVerse\ext\OgreSDK_vc10_v1-8-0\lib\$(Configuration);C:\SIGVerse\ext\CEGUI-0.7.6\lib;C:\SIGVerse\ext\libssh2-1.4.2-openssl-x86-win32nt-msvc\lib;C:\SIGVerse\ext\zlib\lib;C:\SIGVerse\ext\OculusSDK_0.4.3\LibOVR\Lib\Win32\VS2010;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>
+	    OgreMain.lib;OIS.lib;OgreTerrain.lib;comctl32.lib;ws2_32.lib;winmm.lib;CEGUIBase-0.lib;CEGUIOgreRenderer-0.lib;zlib.lib;SIGService.lib;libovr.lib;libSgvX3D.lib;jvm.lib;%(AdditionalDependencies)
+      </AdditionalDependencies>
+      <AdditionalLibraryDirectories>
+	    $(SIGSERVICE_ROOT_PATH)\Windows\Release_2010;
+		$(X3D_ROOT_PATH)\parser\cpp\Release;
+		$(JDK_PATH)\lib;
+		$(BOOST_ROOT_PATH)\stage\lib;
+		$(OGRE_SDK_PATH)\lib\$(Configuration);
+		$(CEGUI_ROOT_PATH)\lib;
+		$(LIBSSH2_ROOT_PATH)\win32\Release_dll\;
+		$(ZLIB_PATH)\lib;
+		$(LIBOVR_ROOT_PATH)\Lib\Win32\VS2012;
+		%(AdditionalLibraryDirectories)
+      </AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
