Update setup script to build x3d & sigservice This updates setup_env to pull x3d and sigservice from the forks under noirb, which have been updated to use the same environment variables as this project. This removes two manual builds for anyone using the script, and ensures everything is compatible (sigservice required a couple of minor changes to work with VS2015 and CEGUI 0.8, for example).
The setup & build scripts have also gotten a couple of minor changes to be
a little more user-friendly (no prompting for VS version if only one
version is detected, no more dropping you in some build directory when the
build fails, etc.)

--- a/SIGViewer/SIGViewer.vcxproj
+++ b/SIGViewer/SIGViewer.vcxproj
@@ -86,8 +86,8 @@
 			$(OGRE_SDK)\include\OGRE;
 			$(OGRE_SDK)\Samples\Common\include;
 			$(CEGUI_ROOT_PATH)\cegui\include;
-			$(JDK_PATH)\include;
-			$(JDK_PATH)\include\win32;
+			$(JDK_ROOT_PATH)\include;
+			$(JDK_ROOT_PATH)\include\win32;
 			$(X3D_ROOT_PATH)\parser\cpp\X3DParser;
 			$(LIBSSH2_ROOT_PATH)\include;
 			$(SIGSERVICE_ROOT_PATH)\Windows\SIGService;
@@ -100,7 +100,7 @@
       <AdditionalLibraryDirectories>
 		$(OGRE_SDK_PATH)\lib\$(ConfigurationName);
 		$(CEGUI_ROOT_PATH)\lib;
-		$(JDK_PATH)\lib;
+		$(JDK_ROOT_PATH)\lib;
 		$(BOOST_ROOT)\stage\lib;
 		$(LIBSSH2_ROOT_PATH)\lib;
 		$(SIGSERVICE_ROOT_PATH)\Windows\Release_2010;
