--- a/SIGViewer/SIGViewer.vcxproj
+++ b/SIGViewer/SIGViewer.vcxproj
@@ -117,24 +117,24 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
-      <Optimization>MaxSpeed</Optimization>
+      <Optimization>Disabled</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <AdditionalIncludeDirectories>
-	    $(BUILD_SIGSERVICE_INC);
-		$(BUILD_X3D_INC);
-		$(JDK_ROOT_PATH)\include;
-		$(JDK_ROOT_PATH)\include\win32;
-		$(BUILD_BOOST_INC);
-		$(BUILD_OGRE_INC);
-		$(BUILD_OGRE_INC)\OGRE\Overlay;
-		$(BUILD_OGRE_INC)\OIS;
-		$(BUILD_OGRE_INC)\OGRE;
-		$(OGRE_SDK)\Samples\Common\include;
-		$(BUILD_CEGUI_INC);
-		$(BUILD_LIBSSH2_INC);
-		$(BUILD_LIBOVR_INC);
-      </AdditionalIncludeDirectories>
+        $(BUILD_SIGSERVICE_INC);
+        $(BUILD_X3D_INC);
+        $(JDK_ROOT_PATH)\include;
+        $(JDK_ROOT_PATH)\include\win32;
+        $(BUILD_BOOST_INC);
+        $(BUILD_OGRE_INC);
+        $(BUILD_OGRE_INC)\OGRE\Overlay;
+        $(BUILD_OGRE_INC)\OIS;
+        $(BUILD_OGRE_INC)\OGRE;
+        $(BUILD_OGRE_INC)\OGRE\RenderSystems\GL3Plus\include;
+        $(OGRE_SDK)\Samples\Common\include;
+        $(BUILD_CEGUI_INC);
+        $(BUILD_LIBSSH2_INC);
+        $(BUILD_LIBOVR_INC)</AdditionalIncludeDirectories>
       <CompileAs>CompileAsCpp</CompileAs>
       <RuntimeTypeInfo>true</RuntimeTypeInfo>
       <ProgramDataBaseFileName>$(IntDir)vc$(PlatformToolsetVersion).pdb</ProgramDataBaseFileName>
@@ -144,7 +144,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalDependencies>
-	    OgreMain.lib;OIS.lib;OgreTerrain.lib;comctl32.lib;ws2_32.lib;winmm.lib;CEGUIBase-0.lib;CEGUIOgreRenderer-0.lib;zlib.lib;SIGService.lib;libovr.lib;libSgvX3D.lib;jvm.lib;%(AdditionalDependencies)
+	    OgreMain.lib;OIS.lib;OgreTerrain.lib;Opengl32.lib;gl3w.lib;comctl32.lib;ws2_32.lib;winmm.lib;CEGUIBase-0.lib;CEGUIOgreRenderer-0.lib;zlib.lib;SIGService.lib;libovr.lib;libSgvX3D.lib;jvm.lib;RenderSystem_GL3Plus.lib;%(AdditionalDependencies)
       </AdditionalDependencies>
       <AdditionalLibraryDirectories>
 	    $(BUILD_SIGSERVICE_LIB);
@@ -152,9 +152,11 @@
 		$(JDK_ROOT_PATH)\lib;
 		$(BUILD_BOOST_LIB);
 		$(BUILD_OGRE_LIB)\$(Configuration);
+        $(BUILD_OGRE_LIB)\$(Configuration)\opt;
 		$(BUILD_CEGUI_LIB);
 		$(BUILD_LIBSSH2_LIB);
 		$(BUILD_LIBOVR_LIB);
+        $(BUILD_GL3W_LIB);
 		%(AdditionalLibraryDirectories)
       </AdditionalLibraryDirectories>
     </Link>
