Fix rendering in Oculus Mode! The previous update, which switched the Ogre renderer from legacy GL to GL3Plus, broke most rendering due to incompatibilities in many materials.
This change reverts back to the legacy GL renderer, and relies on GL 2.0
extensions (specifically GL_ARB_framebuffer_object) to do the texture
blitting from the Ogre render target to the OVR texture instead of the GL3
functions we were able to use before. Everything looks to be working well.

--- a/SIGViewer/SIGViewer.vcxproj
+++ b/SIGViewer/SIGViewer.vcxproj
@@ -130,7 +130,7 @@
         $(BUILD_OGRE_INC)\OGRE\Overlay;
         $(BUILD_OGRE_INC)\OIS;
         $(BUILD_OGRE_INC)\OGRE;
-        $(BUILD_OGRE_INC)\OGRE\RenderSystems\GL3Plus\include;
+        $(BUILD_OGRE_INC)\OGRE\RenderSystems\GL;
         $(OGRE_SDK)\Samples\Common\include;
         $(BUILD_CEGUI_INC);
         $(BUILD_LIBSSH2_INC);
@@ -144,20 +144,20 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalDependencies>
-	    OgreMain.lib;OIS.lib;OgreTerrain.lib;Opengl32.lib;gl3w.lib;comctl32.lib;ws2_32.lib;winmm.lib;CEGUIBase-0.lib;CEGUIOgreRenderer-0.lib;zlib.lib;SIGService.lib;libovr.lib;libSgvX3D.lib;jvm.lib;RenderSystem_GL3Plus.lib;%(AdditionalDependencies)
+	    OgreMain.lib;OIS.lib;OgreTerrain.lib;Opengl32.lib;glew32s.lib;comctl32.lib;ws2_32.lib;winmm.lib;CEGUIBase-0.lib;CEGUIOgreRenderer-0.lib;zlib.lib;SIGService.lib;libovr.lib;libSgvX3D.lib;jvm.lib;RenderSystem_GL.lib;%(AdditionalDependencies)
       </AdditionalDependencies>
       <AdditionalLibraryDirectories>
-	    $(BUILD_SIGSERVICE_LIB);
-		$(BUILD_X3D_LIB);
-		$(JDK_ROOT_PATH)\lib;
-		$(BUILD_BOOST_LIB);
-		$(BUILD_OGRE_LIB)\$(Configuration);
+        $(BUILD_SIGSERVICE_LIB);
+        $(BUILD_X3D_LIB);
+        $(JDK_ROOT_PATH)\lib;
+        $(BUILD_BOOST_LIB);
+        $(BUILD_OGRE_LIB)\$(Configuration);
         $(BUILD_OGRE_LIB)\$(Configuration)\opt;
-		$(BUILD_CEGUI_LIB);
-		$(BUILD_LIBSSH2_LIB);
-		$(BUILD_LIBOVR_LIB);
-        $(BUILD_GL3W_LIB);
-		%(AdditionalLibraryDirectories)
+        $(BUILD_CEGUI_LIB);
+        $(BUILD_LIBSSH2_LIB);
+        $(BUILD_LIBOVR_LIB);
+        $(BUILD_GLEW_LIB);
+        %(AdditionalLibraryDirectories)
       </AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
